--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@ h1, h2, h3, h4, h5, h6 {
     <title>Info Viz Project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body><br>
+<body><br><br><br><br>
    <center><h1>18CSE103J - Information Visualization</h1>
     <h3>Adhavan (RA2111003011438)</h3></center>
+    <div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">TRAI MyCall App</a>
     <div class="w3-right w3-hide-small">
       <a href="#a" class="w3-bar-item w3-button">Abstract</a>
       <a href="#b" class="w3-bar-item w3-button">Report</a>
-      <a href="#c" class="w3-bar-item w3-button">Call Quality over VoIP Analysis</a>
+      <a href="#c" class="w3-bar-item w3-button">Call Quality Analysis</a>
       <a href="#e" class="w3-bar-item w3-button">About us</a>
     </div>
   </div>
@@ -36,8 +39,10 @@ h1, h2, h3, h4, h5, h6 {
        <body>
      <center><h2>Voice Call Quality Customer Experience Using TRAI MyCall App</h2>
          <h3>Abstract</h3> </center>
+    <div class="w3-container w3-padding-64">
     <p>In an era where communication is paramount, the quality of voice calls has emerged as a critical factor in shaping customer experiences within the telecommunications industry. This research paper delves into the intricate relationship between voice call quality and customer satisfaction, facilitated by the innovative TRAI MyCall App. Through real-time customer feedback and meticulous analysis of network data, this study reveals a profound understanding of customer perceptions and their alignment with network performance. Drawing on a diverse sample, the research unearths nuanced insights into call quality parameters, including clarity, signal strength, and connection stability. Notably, signal strength is identified as a linchpin in delivering satisfying call experiences. The synthesis of quantitative ratings and qualitative narratives offers a comprehensive overview of customer sentiment, ranging from seamless conversations to instances marred by call drops and voice distortions. These findings not only highlight the importance of customer-centric approaches but also underscore the interconnectedness of network performance and customer satisfaction. This study provides significant implications for both regulatory bodies and service providers. For the Telecommunication Regulatory Authority of India (TRAI), the insights pave the way for refining industry standards and regulations to ensure consistent call quality. Telecommunication service providers stand to benefit from these insights by proactively addressing network vulnerabilities and optimizing infrastructure, thereby enhancing overall service quality. Looking ahead, the report envisions a future replete with opportunities for longitudinal studies and the evolution of the TRAI MyCall App to further capture the nuances of customer experiences. In conclusion, this research underscores the transformative power of integrating customer feedback and network data, ultimately reshaping the landscape of voice call quality and enhancing customer experiences in the telecommunications realm.</p>
     <!-- Additional content can be added here -->
+    </div>
 </body>
     </p><hr>
     </div>  
